k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aircall-slack
  labels:
    name: aircall-slack
    app: aircall-slack-service
    environment: production
